# metagit

./: .gitignore  .mgit_config.example.json  CLAUDE.md  Cargo.toml  ICONS.md  IMPLEMENTATION.md  LICENSE  README.md  Requirements.md  SUMMARY.md  TESTING.md
.claude/: settings.local.json
src/: main.rs
src/commands/: init.rs  mod.rs  pull.rs  push.rs  refresh.rs  restore.rs  run.rs  save.rs  status.rs  sync.rs
src/db/: mod.rs
src/models/: config.rs  mod.rs  repo_state.rs
src/utils/: git.rs  icons.rs  mod.rs  script.rs  time.rs  vars.rs
