[package]
name = "mgit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = { version = "0.19", default-features = false, features = ["vendored-openssl", "vendored-libgit2", "ssh"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"
colored = "2.1"
walkdir = "2.5"
unicode-width = "0.1"
dirs = "5.0"
terminal_size = "0.4"
